--- a/index.html
+++ b/index.html
@@ -5,44 +5,130 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kailash Karthikeyan - Portfolio</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
+        /* Reset some default styling */
+        * {
             margin: 0;
-            padding: 20px;
-            background-color: #f9f9f9;
+            padding: 0;
+            box-sizing: border-box;
         }
+
+        /* Body styling */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            line-height: 1.6;
+            padding: 20px;
+        }
+
+        /* Container for content */
         .container {
-            max-width: 600px;
+            max-width: 900px;
             margin: auto;
-            border: 1px solid #ccc;
-            padding: 20px;
-            border-radius: 10px;
-            background-color: white;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            padding: 40px;
+            background-color: #fff;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
+
+        /* Profile Image */
         .profile-img {
-            border-radius: 50%;
             width: 200px;
             height: 200px;
+            border-radius: 50%;
+            border: 5px solid #ddd;
             object-fit: cover;
-            border: 5px solid #ccc;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-        .projects, .skills, .contact {
+
+        /* Heading and subheading */
+        h1 {
+            font-size: 2.8rem;
+            color: #333;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        h2 {
+            font-size: 1.6rem;
+            color: #444;
             margin-top: 20px;
+            text-transform: uppercase;
+            border-bottom: 2px solid #ddd;
+            padding-bottom: 10px;
+            margin-bottom: 15px;
         }
-        .skill, .project {
-            background-color: #f4f4f4;
-            padding: 10px;
-            margin: 5px;
+
+        /* Paragraph styling */
+        p {
+            font-size: 1.2rem;
+            color: #555;
+            margin-bottom: 20px;
+        }
+
+        /* Projects and Skills sections */
+        .projects, .skills, .contact {
+            margin-top: 30px;
+        }
+
+        /* Project and Skill items */
+        .project, .skill {
+            background-color: #f0f0f0;
+            color: #333;
+            padding: 12px 20px;
+            margin: 10px;
+            border-radius: 30px;
             display: inline-block;
-            border-radius: 5px;
+            font-size: 1.2rem;
+            transition: background-color 0.3s ease;
+        }
+
+        .project:hover, .skill:hover {
+            background-color: #ddd;
+        }
+
+        /* Contact section */
+        .contact p {
+            font-size: 1.2rem;
+            margin-top: 10px;
+        }
+
+        .contact a {
+            color: #0077b6;
+            text-decoration: none;
+        }
+
+        .contact a:hover {
+            text-decoration: underline;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .container {
+                padding: 25px;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+
+            .profile-img {
+                width: 150px;
+                height: 150px;
+            }
+
+            .skill, .project {
+                font-size: 1rem;
+                padding: 8px 15px;
+            }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="./istockphoto.jpg" alt="Kailash" class="profile-img">
+        <img src="./jer.jpeg" alt="Kailash Karthikeyan" class="profile-img">
         <h1>Kailash Karthikeyan.M</h1>
         <p>Aspiring Embedded Systems Engineer</p>
         
@@ -53,7 +139,7 @@
         
         <section class="skills">
             <h2>Skills</h2>
-            <div class="skill">C</div>
+            <div class="skill">C Programming</div>
             <div class="skill">Python</div>
             <div class="skill">LTSpice</div>
             <div class="skill">Arduino IDE</div>
