--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="./jer.jpeg" alt="Kailash Karthikeyan" class="profile-img">
+        <img src="./KAILASH KARTHIKEYAN M photo().png" alt="Kailash Karthikeyan" class="profile-img">
         <h1>Kailash Karthikeyan.M</h1>
         <p>Aspiring Embedded Systems Engineer</p>
         
